--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,10 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
+
+variables:
+  System.debug: true
+
 trigger:
 - master
 
@@ -24,5 +28,5 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: 'dist'
+    PathtoPublish: 'dist/pd-pac-conference-ng'
     ArtifactName: 'app'
