PAC-27 cache api

--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -23,5 +23,17 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "from-api",
+      "urls": ["/conferences", "/conference/**"],
+      "cacheConfig": {
+        "strategy": "performance",
+        "maxSize": 50,
+        "maxAge": "3m",
+        "timeout": "5s"
+      }
+    }
   ]
 }
