PAC-45 implemented favorites feature

--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -27,7 +27,7 @@
   "dataGroups": [
     {
       "name": "from-api",
-      "urls": ["/conferences", "/conference/**"],
+      "urls": ["/conferences", "/conference/**", "/admin/favorites"],
       "cacheConfig": {
         "strategy": "performance",
         "maxSize": 50,
